<resources>
    <string name="app_name">Personal Accounting</string>
    <string name="pref_name">Accounting_PREF</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>
    <string name="personal_accounting">Personal Accounting</string>
    <string name="deposit">DEPOSIT</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="select_account">Select account</string>
    <string name="confirm">CONFIRM</string>
    <string name="Settings">Settings</string>
    <string name="Password">Password</string>
    <string name="App_theme">App theme</string>
    <string name="drak">drak</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="share">share</string>
    <string name="account_type">Account Type</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_expiration_date">Account expiration date</string>
    <string name="balance">Balance</string>
    <string name="add">Add</string>
    <string name="this_is_check">This is check</string>
    <string name="slash">/</string>
    <string name="yyyy">YYYY</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="no_accounts_here">Sorry there is no accounts here</string>
    <string name="add_account">ADD ACCOUNT</string>
    <string name="last_3_transactions">Last 3 Transactions</string>
    <string name="search">search</string>
    <string name="from">FROM:</string>
    <string name="to">TO :</string>
    <string name="filter">FILTER</string>
    <string name="date_filtering">Date filtering :</string>
    <string name="this_is_about_me">THIS iS ABOUT ME:</string>
    <string name="my_name_is">My name is ......</string>
    <string name="ok">OK</string>
    <string name="your_name">your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="this_is_your_transaction_alarm">This is your transaction alarm!</string>
    <string name="clear_filter">Clear Filter</string>
</resources>
