<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?backgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/bigPadding">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextBig"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:text="@string/this_is_about_me" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/normalPadding"
        android:text="@string/my_name_is" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigPadding"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/positiveColor" />


</LinearLayout>
