<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?cardItemBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/normalPadding"
    android:paddingTop="@dimen/normalPadding"
    android:paddingRight="@dimen/normalPadding"
    android:paddingBottom="@dimen/normalPadding">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normalPadding"
        android:text="@string/date_filtering" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/normalPadding"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/fromLayout"
            layout="@layout/layout_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normalPadding"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/normalPadding"
            android:text="@string/to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/toLayout"
            layout="@layout/layout_date" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filterBTN"
        style="@style/TextNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/bg_positive_btn"
        android:text="@string/filter"
        android:textColor="?cardItemBackground"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.appcompat.widget.LinearLayoutCompat>

