<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/_30sdp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:paddingLeft="@dimen/_20sdp"
           android:src="@drawable/ic_launcher_background" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTV"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_25sdp"

            android:text="parvin golmakani" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_15sdp"
            android:text="@string/Settings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/black_bg">

        </View>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_25sdp">

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_20sdp"
                android:tint="?iconTintColor"
                app:srcCompat="@drawable/ic_lock_outline_black_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/Password" />


        </LinearLayout>


        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_20sdp"
                android:tint="?iconTintColor"
                app:srcCompat="@drawable/ic_wb_sunny_black_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/App_theme" />

            <Button
                android:id="@+id/themeButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:text="@string/drak"
                android:textColor="#ffffff">
            </Button>
        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:id="@+id/aboutUs"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_15sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_20sdp"
            android:tint="?iconTintColor"
            app:srcCompat="@drawable/ic_info_outline_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/about_us" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactUs"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_15sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_20sdp"
            android:tint="?iconTintColor"
            app:srcCompat="@drawable/ic_phone_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/contact_us" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/share"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_15sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_20sdp"
            android:tint="?iconTintColor"
            app:srcCompat="@drawable/ic_share_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView

            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/share" />


    </LinearLayout>

</LinearLayout>