<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".view.deposit_withdraw.DepositWithdrawActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:background="?positiveColor"
        android:layout_gravity="bottom"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:elevation="0dp"
        tools:ignore="UnusedAttribute">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:contentInsetStart="0dp"
            android:contentInsetEnd="0dp"
            tools:ignore="NewApi,UnusedAttribute">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/normalPadding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/normalPadding"
                    android:text="Page Title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/lightGrey"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/normalPadding">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/dateTV"
                style="@style/TextBig"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:gravity="center"
                android:padding="@dimen/normalPadding"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normalPadding"
                android:gravity="center"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:tint="?textColor"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_dollar" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount" />


                <com.blackcat.currencyedittext.CurrencyEditText
                    android:id="@+id/amountET"
                    style="@style/TextBig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/bigPadding"
                    android:layout_marginLeft="@dimen/bigPadding"
                    android:padding="@dimen/normalPadding" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normalPadding"
                android:gravity="center"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_description" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/explainsET"
                    style="@style/TextBig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/bigPadding"
                    android:layout_marginLeft="@dimen/bigPadding"
                    android:padding="@dimen/normalPadding"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normalPadding"
                android:gravity="center"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_credit_card" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/normalPadding"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/account" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/account"
                    style="@style/TextBig"
                    android:layout_width="@dimen/_210sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/bigPadding"
                    android:layout_marginLeft="@dimen/bigPadding"
                    android:padding="@dimen/normalPadding"
                    android:singleLine="true"
                    android:text="@string/select_account"
                    android:textColor="@color/linkColor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>