<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:contentInsetStart="0dp"
            android:contentInsetEnd="0dp"
            tools:ignore="NewApi,UnusedAttribute">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/normalPadding"
                    android:tint="?iconTintColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back"
                    tools:ignore="VectorDrawableCompat" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/normalPadding"
                    android:text="Add Account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/lightGrey"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:clipToPadding="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="?iconTintColor"
                    app:srcCompat="@drawable/ic_account_bank_black_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/bank_name" />


            </LinearLayout>

            <EditText
                android:id="@+id/bankName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text_2"
                android:paddingLeft="@dimen/_15sdp"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="?iconTintColor"
                    app:srcCompat="@drawable/ic_type_black_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/account_type" />


            </LinearLayout>

            <EditText
                android:id="@+id/accType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text_2"
                android:paddingLeft="@dimen/_15sdp"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="?iconTintColor"
                    app:srcCompat="@drawable/ic_number_card_black_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/account_number" />


            </LinearLayout>

            <EditText
                android:id="@+id/accNum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text_2"
                android:paddingLeft="@dimen/_15sdp"
                android:text="" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="?iconTintColor"
                    app:srcCompat="@drawable/ic_date_range_black_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/account_expiration_date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/bg_edit_text_2"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/yearET"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="YYYY"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:text=""
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/monthET"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="MM"
                    android:inputType="numberDecimal"
                    android:maxLength="2"
                    android:text=""
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/dayET"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="DD"
                    android:inputType="numberDecimal"
                    android:maxLength="2"
                    android:text=""
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="?iconTintColor"
                    app:srcCompat="@drawable/ic_account_balance_wallet_black_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/balance" />


            </LinearLayout>

            <me.abhinay.input.CurrencyEditText
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text_2"
                android:inputType="number"
                android:paddingLeft="@dimen/_15sdp"
                android:text="" />


            <Button
                android:id="@+id/buttonSaveAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="?positiveColor"
                android:text="@string/add"
                android:textColor="@color/white" />
        </LinearLayout>


    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>